K/k8ssandra-operator-k5CXXqFSTgTxDVd/k8ssandra-operator.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-k8ssandra-operator-webhook-service
  labels:
    app.kubernetes.io/name: k8ssandra-operator
    helm.sh/chart: k8ssandra-operator-0.37.4
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8ssandra-release-name-default
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    control-plane: k8ssandra-operator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-cass-operator
  labels:
    app.kubernetes.io/name: cass-operator
    helm.sh/chart: cass-operator-0.37.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8ssandra-release-name-default
    control-plane: release-name-controller-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cass-operator
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: k8ssandra-release-name-default
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cass-operator
        helm.sh/chart: cass-operator-0.37.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: k8ssandra-release-name-default
        control-plane: release-name-controller-manager
    spec:
      serviceAccountName: release-name-cass-operator
      securityContext: {}
      containers:
        - name: cass-operator
          args:
            - --config=/configs/controller_manager_config.yaml
          command:
            - /manager
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 10056
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                "": NET_RAW
          image: docker.io/k8ssandra/cass-operator:v1.11.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /configs
              name: manager-config
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - configMap:
            name: release-name-cass-operator-manager-config
          name: manager-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-k8ssandra-operator
  labels:
    app.kubernetes.io/name: k8ssandra-operator
    helm.sh/chart: k8ssandra-operator-0.37.4
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8ssandra-release-name-default
    control-plane: k8ssandra-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: k8ssandra-operator
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: k8ssandra-release-name-default
      control-plane: k8ssandra-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8ssandra-operator
        helm.sh/chart: k8ssandra-operator-0.37.4
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: k8ssandra-release-name-default
        control-plane: k8ssandra-operator
    spec:
      serviceAccountName: release-name-k8ssandra-operator
      securityContext: {}
      containers:
        - command:
            - /manager
          image: docker.io/k8ssandra/k8ssandra-operator:v1.1.1
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 11640
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                "": NET_RAW
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          name: k8ssandra-operator
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /controller_manager_config.yaml
              name: manager-config
              subPath: controller_manager_config.yaml
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
      terminationGracePeriodSeconds: 10
      volumes:
        - configMap:
            name: release-name-k8ssandra-operator-manager-config
          name: manager-config
        - name: cert
          secret:
            defaultMode: 420
            secretName: release-name-k8ssandra-operator-webhook-server-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/release-name-k8ssandra-operator-serving-cert
  name: release-name-k8ssandra-operator-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: release-name-k8ssandra-operator-webhook-service
        namespace: default
        path: /validate-k8ssandra-io-v1alpha1-k8ssandracluster
    failurePolicy: Fail
    name: vk8ssandracluster.kb.io
    rules:
      - apiGroups:
          - k8ssandra.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - k8ssandraclusters
    sideEffects: None
